# Lithophane-Studio

./: .gitattributes  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
scripts/: prepare-release.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/litho-core/: Cargo.toml
src-tauri/crates/litho-core/src/: export.rs  heightmap.rs  image_pipeline.rs  lib.rs  mesh.rs  presets.rs  types.rs
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AppErrorBoundary.tsx  Panel.tsx  PreviewCard.tsx  SegmentedControl.tsx  TooltipLabel.tsx
src/features/editor/: defaults.ts  projectSchema.ts  types.ts
src/lib/: backend.ts  imageFile.ts  logger.ts  webPreview.ts
